# No-Vmp

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  BUILD  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE  capstone_configure.bzl  coverage.sh  extensions.bzl  linux-pe-fix.patch  llvm_configure.bzl  run_tests.sh
.github/workflows/: ci.yml
legacy/: README.md
lib/disasm/: BUILD  stream.cpp  stream.hpp
lib/emulator/: BUILD  emulator.cpp  emulator.hpp  rwx_allocator.cpp
lib/ir/: BUILD  context.cpp  context.hpp  vmp_to_llvm.cpp  vmp_to_llvm.hpp
lib/vmp/: BUILD  architecture.cpp  architecture.hpp  image_desc.cpp  image_desc.hpp  lifter.cpp  lifter.hpp  rkey.cpp  rkey.hpp  subroutines.cpp  subroutines.hpp  vm_state.cpp  vm_state.hpp
samples/: BUILD
src/: BUILD  main.cpp
test_outputs/: latest_run.txt
tests/: BUILD  disasm_test.cpp  emulator_test.cpp  integration_test.cpp  rkey_test.cpp  test_binary  test_utils.hpp
tests/benchmarks/: BUILD  lift_bench.cpp
tests/fuzz/: BUILD  rkey_fuzz.cpp
